Finished Most of admin Takss
