# app/Http/Controllers/RegistrationController.php
@@ -2,11 +2,12 @@
 
 namespace App\Http\Controllers;
 
-use App\Core\Services\Interfaces\IUtilityService;
 use App\Models\User;
-use App\Traits\HttpResponses;
 use Illuminate\Http\Request;
+use App\Traits\HttpResponses;
+use Illuminate\Support\Facades\Log;
 use Illuminate\Support\Facades\Hash;
+use App\Core\Services\Interfaces\IUtilityService;
 
 class RegistrationController extends Controller
 {
@@ -27,19 +28,21 @@ use HttpResponses;
             'phone_number' => 'required|string|max:255',
             'role' => 'required|integer|in:1,2,3',
             'password' => 'required|string|min:8|confirmed',
+            'password_confirmation' => 'required|string|min:8|same:password',
         ]);
-
-        if(!$this->utilityService->VerifyPhoneNumber($request->input()->phone_number)){
+        $phonenumber = $request->phone_number;
+        if(!$this->utilityService->VerifyPhoneNumber($phonenumber)){
             return $this->error("Invalid Phone Number");
         }
         $user = new User();
-        $user->first_name = $request->input()->first_name;
-        $user->last_name = $request->input()->last_name;
-        $user->home_address = $request->input()->home_address;
-        $user->email = $request->input()->email;
-        $user->role = $request->input()->role;
-        $user->password = Hash::make($request->input()->password);
-        $user->phone_number = $request->input()->phone_number;
+        $user->first_name = $request->first_name;
+        $user->last_name = $request->last_name;
+        $user->home_address = $request->home_address;
+        $user->email = $request->email;
+        $user->role = $request->role;
+        $user->password = Hash::make($request->password);
+        $user->phone_number = $request->phone_number;
+        $user->name = $request->first_name." ".$request->last_name;
         $user->save();
 
         return $this->success("User Created Successfully");
