# app/Models/InspectionRequests.php
@@ -2,8 +2,10 @@
 
 namespace App\Models;
 
-use Illuminate\Database\Eloquent\Factories\HasFactory;
+use App\Models\User;
+use App\Models\Transactions;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
 
 class InspectionRequests extends Model
 {
@@ -21,4 +23,16 @@ class InspectionRequests extends Model
         'first_date',
         'second_date'
     ];
+
+    public function user(){
+    return $this->belongsTo(User::class, 'user_id');
+    }
+
+    public function transaction(){
+        return $this->hasOne(Transactions::class,'transaction_reference');
+    }
+
+    public function inspector(){
+        return $this->belonsTo(User::class,'inspector_id');
+    }
 }
